refactored disease-tag, disease-popover working in genes-table

--- a/client/src/app/components/shared/cvc-tag-overflow/cvc-tag-overflow.component.html
+++ b/client/src/app/components/shared/cvc-tag-overflow/cvc-tag-overflow.component.html
@@ -6,8 +6,7 @@
         <cvc-drug-tag-r [drug]="tag"></cvc-drug-tag-r>
       </ng-container>
       <ng-container *ngSwitchCase="'disease'">
-        {{ tag.name }}
-        <!-- <cvc-disease-tag [disease]="tag"></cvc-disease-tag> -->
+        <cvc-disease-tag-r [disease]="tag"></cvc-disease-tag-r>
       </ng-container>
     </ng-container>
   </div>
@@ -26,8 +25,7 @@
             <cvc-drug-tag-r [drug]="tag"></cvc-drug-tag-r>
           </ng-container>
           <ng-container *ngSwitchCase="'disease'">
-            {{ tag.name }}
-            <!-- <cvc-disease-tag [disease]="tag"></cvc-disease-tag> -->
+            <cvc-disease-tag-r [disease]="tag"></cvc-disease-tag-r>
           </ng-container>
         </ng-container>
       </div>
