refactored variant-popover, variants-table component and home page done

--- a/client/src/app/components/variants/variant-tag/variant-tag.component.html
+++ b/client/src/app/components/variants/variant-tag/variant-tag.component.html
@@ -13,8 +13,7 @@
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #popoverContent>
-    <p>popover</p>
-    <!-- <cvc-variant-popover-r *ngIf="enablePopover" [variantId]="variant.id"></cvc-variant-popover-r> -->
+    <cvc-variant-popover-r *ngIf="enablePopover" [variantId]="variant.id"></cvc-variant-popover-r>
   </ng-template>
 </ng-template>
 
