refactored evidence-tag, popover

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -274,8 +274,7 @@
   <tbody>
     <tr *ngFor="let eid of evidenceTable.data">
       <td>
-        {{ eid.id }}
-        <!-- <cvc-evidence-tag [evidence]="eid"></cvc-evidence-tag> -->
+        <cvc-evidence-tag-r [evidence]="eid"></cvc-evidence-tag-r>
       </td>
       <td *ngIf="displayGeneAndVariant">
         <cvc-gene-tag-r [gene]="eid.gene"></cvc-gene-tag-r>
