refactored phenotype-tag, popover

--- a/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
@@ -92,7 +92,7 @@
           *ngIf="evidence.phenotypes.length > 0">
           <span *ngFor="let ph of evidence.phenotypes">
             {{ ph.name }}
-            <!-- <cvc-phenotype-tag [enablePopover]="false" [phenotype]="ph"></cvc-phenotype-tag> -->
+            <cvc-phenotype-tag-r [enablePopover]="false" [phenotype]="ph"></cvc-phenotype-tag-r>
           </span>
         </nz-descriptions-item>
 
