moved pipes out of shared into their own module

--- a/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
@@ -42,21 +42,18 @@
 
         <!-- evidence type -->
         <nz-descriptions-item nzTitle="Type">
-          {{ evidence.evidenceType }}
-          <!-- {{ evidence.evidenceType | evidenceEnumDisplay }} -->
+          {{ evidence.evidenceType | evidenceEnumDisplay }}
         </nz-descriptions-item>
 
         <!-- evidence direction -->
         <nz-descriptions-item nzTitle="Direction">
-          {{ evidence.evidenceDirection }}
-          <!-- {{ evidence.evidenceDirection | evidenceEnumDisplay }} -->
+          {{ evidence.evidenceDirection | evidenceEnumDisplay }}
         </nz-descriptions-item>
 
         <!-- clinical significance -->
         <nz-descriptions-item nzTitle="Clinical Significance"
           nzSpan="2">
-          {{ evidence.clinicalSignificance }}
-          <!-- {{ evidence.clinicalSignificance | evidenceEnumDisplay }} -->
+          {{ evidence.clinicalSignificance | evidenceEnumDisplay }}
         </nz-descriptions-item>
 
         <!-- evidence rating -->
