--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -315,38 +315,32 @@
         {{ eid.evidenceLevel }}
       </td>
       <td nzAlign="center">
-        {{ eid.evidenceType }}
-        <!-- <i nz-icon
-             [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
-             nz-tooltip
-             nzTooltipPlacement="top"
-             [nzTooltipTitle]="eid.evidenceType | evidenceEnumDisplay"></i> -->
+        <i nz-icon
+          [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
+          nz-tooltip
+          nzTooltipPlacement="top"
+          [nzTooltipTitle]="eid.evidenceType | evidenceEnumDisplay"></i>
       </td>
       <td nzAlign="center">
-        {{ eid.evidenceDirection }}
-        <!-- <i nz-icon
-             [nzType]="eid.evidenceDirection | evidenceEnumDisplay: 'icon-name'"
-             nz-tooltip
-             nzTooltipPlacement="top"
-             [nzTooltipTitle]="eid.evidenceDirection | evidenceEnumDisplay"></i> -->
+        <i nz-icon
+          [nzType]="eid.evidenceDirection | evidenceEnumDisplay: 'icon-name'"
+          nz-tooltip
+          nzTooltipPlacement="top"
+          [nzTooltipTitle]="eid.evidenceDirection | evidenceEnumDisplay"></i>
       </td>
       <td nzAlign="center">
-        {{ eid.clinicalSignificance }}
-
-        <!-- <i nz-icon
-             [nzType]="eid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
-             nz-tooltip
-             nzTooltipPlacement="top"
-             [nzTooltipTitle]="eid.clinicalSignificance | evidenceEnumDisplay"></i> -->
+        <i nz-icon
+          [nzType]="eid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
+          nz-tooltip
+          nzTooltipPlacement="top"
+          [nzTooltipTitle]="eid.clinicalSignificance | evidenceEnumDisplay"></i>
       </td>
       <td nzAlign="center">
-        {{ eid.variantOrigin }}
-
-        <!-- <i nz-icon
-             [nzType]="eid.variantOrigin| evidenceEnumDisplay: 'icon-name'"
-             nz-tooltip
-             nzTooltipPlacement="top"
-             [nzTooltipTitle]="eid.variantOrigin | evidenceEnumDisplay"></i> -->
+        <i nz-icon
+          [nzType]="eid.variantOrigin| evidenceEnumDisplay: 'icon-name'"
+          nz-tooltip
+          nzTooltipPlacement="top"
+          [nzTooltipTitle]="eid.variantOrigin | evidenceEnumDisplay"></i>
       </td>
       <td nzAlign="center">
         {{ eid.evidenceRating }}
