refactored source, clinical trial tag & popovers

--- a/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
@@ -32,7 +32,7 @@
         <!-- source -->
         <nz-descriptions-item nzTitle="Source"
           nzSpan="2">
-          <strong>{{ evidence.source.sourceType }}: </strong> {{ evidence.source.citation }}
+          <cvc-source-tag-r [source]="evidence.source"></cvc-source-tag-r>
         </nz-descriptions-item>
 
         <!-- evidence level -->
