--- a/client/src/app/components/clinical-trials/clinical-trial-tag/clinical-trial-tag.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trial-tag/clinical-trial-tag.component.html
@@ -1,20 +1,21 @@
 <ng-container *ngIf="linked; else unlinked">
-  <a routerLink="/evidence/{{evidence.id}}">
+  <a routerLink="/clinical-trials/{{clinicalTrial.id}}">
     <ng-template [ngTemplateOutlet]="tag"></ng-template>
   </a>
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag nz-popover
-    [nzPopoverMouseEnterDelay]="0.5"
-    [nzPopoverContent]="evidencePopover"
-    nzPopoverPlacement="right"
-    nzPopoverTrigger="click">
+  <nz-tag *ngIf="enablePopover; else noPopover"
+  nz-popover
+  [nzPopoverMouseEnterDelay]="0.5"
+  [nzPopoverContent]="clinicalTrialPopover"
+  nzPopoverPlacement="right"
+  nzPopoverTrigger="hover">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
-  <ng-template #evidencePopover>
-    <cvc-evidence-popover-r *ngIf="enablePopover"
-      [evidenceId]="evidence.id"></cvc-evidence-popover-r>
+
+  <ng-template #clinicalTrialPopover>
+    <cvc-clinical-trial-popover-r [clinicalTrialId]="clinicalTrial.id"></cvc-clinical-trial-popover-r>
   </ng-template>
 </ng-template>
 
@@ -29,8 +30,6 @@
 </ng-template>
 
 <ng-template #tagContent>
-  <i nz-icon
-    nzType="civic-evidence"
-    nzTheme="twotone"
-    nzTwotoneColor="#F68F37"></i> {{ evidence.name }}
+  <i nz-icon nzType="audit" class="clinical-trial-tag-icon"></i>
+    {{ clinicalTrial.nctId }}
 </ng-template>
