--- a/client/src/app/components/evidence/evidence-tag/evidence-tag.component.html
+++ b/client/src/app/components/evidence/evidence-tag/evidence-tag.component.html
@@ -9,7 +9,7 @@
     [nzPopoverMouseEnterDelay]="0.5"
     [nzPopoverContent]="evidencePopover"
     nzPopoverPlacement="right"
-    nzPopoverTrigger="click">
+    nzPopoverTrigger="hover">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #evidencePopover>
