--- a/client/src/app/views/evidence/evidence-home/evidence-home.page.html
+++ b/client/src/app/views/evidence/evidence-home/evidence-home.page.html
@@ -12,8 +12,7 @@
 
   <nz-page-header-content>
     <nz-row *ngIf="tableView">
-      <div nz-col
-        [nzSpan]="24">
+      <div nz-col [nzSpan]="24">
         <div class="content">
           <cvc-evidence-table></cvc-evidence-table>
         </div>
