switched to abbreviation for assertions-table's column header labels

--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -39,26 +39,34 @@
       <th nzWidth="5%"
         [nzColumnKey]="sortColumns.AssertionType"
         [nzSortFn]="true"
-        nzAlign="center">
-        Assertion Type
+        nzAlign="center"
+        nz-tooltip
+        nzTooltipTitle="Assertion Type">
+        AT
       </th>
       <th nzWidth="5%"
         [nzColumnKey]="sortColumns.AssertionDirection"
         [nzSortFn]="true"
-        nzAlign="center">
-        Assertion Direction
+        nzAlign="center"
+        nz-tooltip
+        nzTooltipTitle="Assertion Direction">
+        AD
       </th>
       <th nzWidth="5%"
         [nzColumnKey]="sortColumns.ClinicalSignificance"
         [nzSortFn]="true"
-        nzAlign="center">
-        Clinical Significance
+        nzAlign="center"
+        nz-tooltip
+        nzTooltipTitle="Clinical Significance">
+        CS
       </th>
       <th nzWidth="5%"
         [nzColumnKey]="sortColumns.AmpLevel"
         [nzSortFn]="true"
-        nzAlign="center">
-        AMP/ASCO/CAP Category
+        nzAlign="center"
+        nz-tooltip
+        nzTooltipTitle="AMP/ASCO/CAP Category">
+        CAT
       </th>
     </tr>
     <tr>
