refactored community pages, org table, org tag & popover, user-avatar

--- a/client/src/app/views/organizations/organizations-home/organizations-home.page.html
+++ b/client/src/app/views/organizations/organizations-home/organizations-home.page.html
@@ -11,6 +11,7 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
+          <cvc-organizations-table></cvc-organizations-table>
         </div>
       </div>
     </div>
