--- a/client/src/app/components/organizations/organization-popover/organization-popover.component.html
+++ b/client/src/app/components/organizations/organization-popover/organization-popover.component.html
@@ -6,8 +6,8 @@
 
       <!-- title -->
       <ng-template #cardTitle>
-        <cvc-user-avatar [user]="{displayName: org.name, profileImagePath: org.profileImagePath}"
-          size="default"></cvc-user-avatar>
+        <cvc-user-avatar-r [user]="{displayName: org.name, profileImagePath: org.profileImagePath}"
+          size="default"></cvc-user-avatar-r>
         <span nz-typography
           nzStyle="default"
           class="display-name">{{ org.name }}</span>
