--- a/client/src/app/components/organizations/organizations-table/organizations-table.component.html
+++ b/client/src/app/components/organizations/organizations-table/organizations-table.component.html
@@ -23,9 +23,9 @@
     </tr>
     <tr>
       <th>
-        <cvc-clearable-text-filter [(inputModel)]="orgNameInput"
+        <cvc-clearable-input-filter [(inputModel)]="orgNameInput"
           placeholderText="Search Name"
-          [onInputChanged]="textInputCallback"></cvc-clearable-text-filter>
+          [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
       </th>
       <th>
       </th>
@@ -38,7 +38,7 @@
   <tbody>
     <tr *ngFor="let organization of organizationsTable.data">
       <td>
-        <cvc-org-tag [org]="organization"></cvc-org-tag>
+        <cvc-organization-tag-r [org]="organization"></cvc-organization-tag-r>
       </td>
       <td>
         {{ organization.memberCount }}
