--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -5,41 +5,34 @@
   [nzShowPagination]="false">
   <thead (nzSortOrderChange)="onSortChanged($event)">
     <tr>
-      <th nzWidth="10%">
+      <th nzWidth="15%">
         Citation
       </th>
-      <th nzWidth="10%"
-        [nzColumnKey]="sortColumns.SourceType"
+      <th [nzColumnKey]="sortColumns.SourceType"
         [nzSortFn]="true">
         Source Type
       </th>
-      <th nzWidth="5%"
-        [nzColumnKey]="sortColumns.CitationId"
+      <th [nzColumnKey]="sortColumns.CitationId"
         [nzSortFn]="true">
-        Citation ID
+        ID
       </th>
-      <th nzWidth="25%"
-        [nzColumnKey]="sortColumns.Authors"
-        [nzSortFn]="true">
-        Authors
-      </th>
-      <th nzWidth="5%"
-        [nzColumnKey]="sortColumns.Year"
-        [nzSortFn]="true">
-        Year
-      </th>
-      <th nzWidth="10%"
-        [nzColumnKey]="sortColumns.Journal"
-        [nzSortFn]="true">
-        Journal
-      </th>
-      <th nzWidth="25%"
-        [nzColumnKey]="sortColumns.Journal"
+      <th nzWidth="25%" [nzColumnKey]="sortColumns.Name"
         [nzSortFn]="true">
         Name
       </th>
-      <th nzWidth="3%"
-        nzRight
+      <th [nzColumnKey]="sortColumns.Authors"
+        [nzSortFn]="true">
+        Authors
+      </th>
+      <th [nzColumnKey]="sortColumns.Year"
+        [nzSortFn]="true">
+        Year
+      </th>
+      <th [nzColumnKey]="sortColumns.Journal"
+        [nzSortFn]="true">
+        Journal
+      </th>
+      <th nzRight
         [nzColumnKey]="sortColumns.EvidenceCount"
         [nzSortFn]="true"><i nz-icon
           nzType="civic:evidence"
@@ -61,7 +54,12 @@
       </th>
       <th>
         <cvc-clearable-input-filter [(inputModel)]="citationIdInput"
-          placeholderText="Citation ID"
+          placeholderText="ID"
+          [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
+      </th>
+      <th>
+        <cvc-clearable-input-filter [(inputModel)]="nameInput"
+          placeholderText="Name"
           [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
       </th>
       <th>
@@ -79,11 +77,6 @@
           placeholderText="Journal"
           [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
       </th>
-      <th>
-        <cvc-clearable-input-filter [(inputModel)]="nameInput"
-          placeholderText="Name"
-          [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
-      </th>
       <th></th>
     </tr>
   </thead>
@@ -99,6 +92,9 @@
         {{ source.citationId}}
       </td>
       <td>
+        {{ source.name }}
+      </td>
+      <td>
         <p nz-typography>
           <span *ngFor="let author of source.authors; last as isLast">
                         {{ author }}{{ isLast ? '' : ', ' }}
@@ -110,9 +106,6 @@
       </td>
       <td>
         {{ source.journal }}
-      </td>
-      <td>
-        {{ source.name }}
       </td>
       <td nzRight>{{source.evidenceItemCount}}</td>
     </tr>
