--- a/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
+++ b/client/src/app/views/evidence/evidence-summary/evidence-summary.component.html
@@ -223,6 +223,12 @@
     </nz-row>
   </nz-space-item>
   <nz-space-item>
-    <cvc-assertions-browse [evidenceId]="evidence.id"></cvc-assertions-browse>
+    <cvc-entity-table-card [cvcTitle]="assertionsCardTitle">
+      <cvc-assertions-table [evidenceId]="evidence.id"></cvc-assertions-table>
+    </cvc-entity-table-card>
+    <ng-template #assertionsCardTitle>
+      <i nz-icon nzType="civic:assertion"></i>
+      {{ evidence.name }} Assertions
+    </ng-template>
   </nz-space-item>
 </nz-space>
