--- a/client/src/app/views/diseases/diseases-summary/diseases-summary.component.html
+++ b/client/src/app/views/diseases/diseases-summary/diseases-summary.component.html
@@ -1,8 +1,24 @@
 <nz-space nzSize="middle" *ngIf="diseaseId" nzDirection="vertical" class="space-align-block">
+
+  <!-- assertions table card -->
   <nz-space-item>
-    <cvc-assertions-browse [diseaseId]="diseaseId"></cvc-assertions-browse>
+    <cvc-entity-table-card [cvcTitle]="assertionsCardTitle">
+      <cvc-assertions-table [diseaseId]="diseaseId"></cvc-assertions-table>
+    </cvc-entity-table-card>
+    <ng-template #assertionsCardTitle>
+      <i nz-icon nzType="civic:disease"></i>
+      Disease Assertions
+    </ng-template>
   </nz-space-item>
+
+  <!-- evidence table card -->
   <nz-space-item>
-    <cvc-evidence-browse [diseaseId]="diseaseId"></cvc-evidence-browse>
+    <cvc-entity-table-card [cvcTitle]="evidenceCardTitle">
+      <cvc-evidence-table [diseaseId]="diseaseId"></cvc-evidence-table>
+    </cvc-entity-table-card>
+    <ng-template #evidenceCardTitle>
+      <i nz-icon nzType="civic:disease"></i>
+      Disease Evidence
+    </ng-template>
   </nz-space-item>
 </nz-space>
