--- a/client/src/app/views/phenotypes/phenotypes-summary/phenotypes-summary.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-summary/phenotypes-summary.component.html
@@ -1,8 +1,24 @@
 <nz-space nzSize="middle" *ngIf="phenotypeId" nzDirection="vertical" class="space-align-block">
+  <!-- assertions table card -->
   <nz-space-item>
-    <cvc-assertions-browse [phenotypeId]="phenotypeId"></cvc-assertions-browse>
+    <cvc-entity-table-card [cvcTitle]="assertionsCardTitle">
+      <cvc-assertions-table [phenotypeId]="phenotypeId"></cvc-assertions-table>
+    </cvc-entity-table-card>
+    <ng-template #assertionsCardTitle>
+      <i nz-icon nzType="civic:phenotype"></i>
+      Phenotype Assertions
+    </ng-template>
   </nz-space-item>
+
+  <!-- evidence table card -->
   <nz-space-item>
-    <cvc-evidence-browse [phenotypeId]="phenotypeId"></cvc-evidence-browse>
+    <cvc-entity-table-card [cvcTitle]="evidenceCardTitle">
+      <cvc-evidence-table [phenotypeId]="phenotypeId"></cvc-evidence-table>
+    </cvc-entity-table-card>
+    <ng-template #evidenceCardTitle>
+      <i nz-icon nzType="civic:phenotype"></i>
+      Phenotype Evidence
+    </ng-template>
   </nz-space-item>
+
 </nz-space>
