--- a/client/src/app/components/shared/phenotype-popover/phenotype-popover.component.html
+++ b/client/src/app/components/shared/phenotype-popover/phenotype-popover.component.html
@@ -8,9 +8,9 @@
         {{ p.name }}
       </ng-template>
       <ng-template #linkout>
-        <cvc-link-tag [href]="p.url" tooltip="View in the Human Phenotype Ontology">
+        <cvc-link-tag-r [href]="p.url" tooltip="View in the Human Phenotype Ontology">
           {{ p.hpoId }}
-        </cvc-link-tag>
+        </cvc-link-tag-r>
       </ng-template>
 
       <nz-descriptions nzSize="small"
