--- a/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
+++ b/client/src/app/views/organizations/organizations-detail/organizations-detail.component.html
@@ -10,9 +10,9 @@
         <span routerLink="/organizatons/{{organization.id}}">
           {{ organization.name }}
         </span>
-        <cvc-link-tag [href]="organization.url">
+        <cvc-link-tag-r [href]="organization.url">
           Organization Website
-        </cvc-link-tag>
+        </cvc-link-tag-r>
       </nz-space>
     </nz-page-header-title>
 
