--- a/client/src/app/views/diseases/diseases-detail/diseases-detail.component.html
+++ b/client/src/app/views/diseases/diseases-detail/diseases-detail.component.html
@@ -9,9 +9,9 @@
       </nz-space>
     </nz-page-header-title>
     <nz-page-header-extra *ngIf="disease.doid">
-      <cvc-link-tag [href]="disease.diseaseUrl" tooltip="View on disease-ontology.org">
+      <cvc-link-tag-r [href]="disease.diseaseUrl" tooltip="View on disease-ontology.org">
         {{ 'DOID:' + disease.doid }}
-      </cvc-link-tag>
+      </cvc-link-tag-r>
 
     </nz-page-header-extra>
     <nz-page-header-content>
