--- a/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
+++ b/client/src/app/views/phenotypes/phenotypes-detail/phenotypes-detail.component.html
@@ -10,9 +10,9 @@
       </nz-space>
     </nz-page-header-title>
     <nz-page-header-extra>
-      <cvc-link-tag [href]="phenotype.url" tooltip="View in the HPO">
+      <cvc-link-tag-r [href]="phenotype.url" tooltip="View in the HPO">
         {{ phenotype.hpoId }}
-      </cvc-link-tag>
+      </cvc-link-tag-r>
     </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
