--- a/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
+++ b/client/src/app/views/variant-types/variant-types-detail/variant-types-detail.component.html
@@ -10,9 +10,9 @@
       </nz-space>
     </nz-page-header-title>
     <nz-page-header-extra>
-      <cvc-link-tag [href]="variantType.url" tooltip="View on sequenceontology.org">
+      <cvc-link-tag-r [href]="variantType.url" tooltip="View on sequenceontology.org">
         {{ variantType.soid }}
-      </cvc-link-tag>
+      </cvc-link-tag-r>
     </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
