renamed link-tag-r to link-tag

--- a/client/src/app/components/clinical-trials/clinical-trial-popover/clinical-trial-popover.component.html
+++ b/client/src/app/components/clinical-trials/clinical-trial-popover/clinical-trial-popover.component.html
@@ -8,9 +8,9 @@
           nzType="audit"></i> {{ t.nctId }}
       </ng-template>
       <ng-template #linkout>
-        <cvc-link-tag-r [href]="t.url">
+        <cvc-link-tag [href]="t.url">
           View on clinicaltrials.gov
-        </cvc-link-tag-r>
+        </cvc-link-tag>
       </ng-template>
 
       <nz-descriptions nzSize="small"
