--- a/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
+++ b/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
@@ -45,10 +45,10 @@
         <cvc-variant-type-tag-r [variantType]="t"></cvc-variant-type-tag-r>
       </td>
       <td>
-        <cvc-link-tag-r [href]="t.url"
+        <cvc-link-tag [href]="t.url"
           tooltip="View on sequenceontology.org">
           {{ t.soid }}
-        </cvc-link-tag-r>
+        </cvc-link-tag>
 
         <ng-template #noSoid>
           --
