--- a/client/src/app/components/shared/org-popover/org-popover.component.html
+++ b/client/src/app/components/shared/org-popover/org-popover.component.html
@@ -30,9 +30,9 @@
         <!-- homepage -->
         <nz-descriptions-item nzTitle="Homepage">
           <ng-container *ngIf="org.url; else noHomepage">
-            <cvc-link-tag-r [href]="org.url">
+            <cvc-link-tag [href]="org.url">
               {{org.name}}
-            </cvc-link-tag-r>
+            </cvc-link-tag>
           </ng-container>
         </nz-descriptions-item>
       </nz-descriptions>
