--- a/client/src/app/views/sources/sources-detail/sources-detail.component.html
+++ b/client/src/app/views/sources/sources-detail/sources-detail.component.html
@@ -10,9 +10,9 @@
       </nz-space>
     </nz-page-header-title>
     <nz-page-header-extra>
-      <cvc-link-tag-r [href]="source.sourceUrl" [tooltip]="'View on ' + source.displayType">
+      <cvc-link-tag [href]="source.sourceUrl" [tooltip]="'View on ' + source.displayType">
         {{ source.displayType + ': ' + source.citationId }}
-      </cvc-link-tag-r>
+      </cvc-link-tag>
     </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
