--- a/client/src/app/views/variants/variants-detail/variants-detail.component.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.component.html
@@ -11,7 +11,7 @@
       </nz-space-item>
       <nz-space-item class="tags">
         <a routerLink="/genes/{{ variant.gene.id }}">
-          <cvc-gene-tag [gene]="variant.gene"></cvc-gene-tag>
+          <cvc-gene-tag-r [gene]="variant.gene"></cvc-gene-tag-r>
         </a>
       </nz-space-item>
 
